# TextContentGeneration

./: LICENSE  README.md  main.py  pyproject.toml  setup.cfg
src/: pdf.py  summarize.py  youtube.py
src/text_content_generator/: audio.py  generate.py  webpage.py
src/text_content_generator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
