[build-system]
requires=["setuptools >= 61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text_content_generator"
version = "0.0.2"
authors = [
  { name="mheshze", email="assassinmahesh@gmail.com" },
]
description = "To scrape or collect text based content from media"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mheshze/TextContentGeneration.git"
#"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"