[metadata]
name = text_content_generator
version = 0.0.1
author = Mahesh Hariprasad
author_email = assassinmahesh@gmail.com
description = To scrape or collect text based content from media
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mheshze/TextContentGeneration.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
include_package_data = True